aks/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: default
  labels:
    app: whoami
spec:
  selector:
    app: whoami
  ports:
  - port: 80
