aks/whoami/traefik.gw.route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-http
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik

  hostnames:
    - whoami.private.antoniocaccamo.work

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https


---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-https
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  
  hostnames:
    - whoami.private.antoniocaccamo.work

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: whoami-service
          namespace: default
          port: 80
